--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,24 @@ background-color: #BEE5FA;
   float: right;
 }
 
+@media only screen
+    and (device-width : 375px)
+    and (device-height : 812px)
+    and (-webkit-device-pixel-ratio : 3) {
+
+      .insta-mobile{
+        display: flex;
+        justify-content: center;
+      }
+
+      .insta-logo{
+        width:50px;
+        height: 50px;
+        padding: 5px;
+        justify-content: center;
+      }
+    }
+
 #custom-row {
   justify-content: center;
 }
